[project]
name = "ButterPyUtils"
description = "Butter's Python utilities."
dynamic = ["version"]
requires-python = ">= 3.14.3"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Caden Finkelstein", email = "me@cadenf.com"}
]
maintainers = [
    {name = "Caden Finkelstein", email = "me@cadenf.com"}
]
dependencies = []
